WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21024
Scrollbar not painted until hovered
https://bugs.webkit.org/show_bug.cgi?id=21024
Summary
Scrollbar not painted until hovered
Matt Lilek
Reported
2008-09-23 06:28:44 PDT
Open <
https://bugs.webkit.org/attachment.cgi?id=23685&action=edit
> and look at the patch <iframe> - the scrollbar is not displayed until hovered or a repaint is forced on Windows with Safari 4.
Attachments
Position the widget correctly in RenderWidget::setWidget to ensure proper invalidation of scrollbars
(3.02 KB, patch)
2008-09-24 23:04 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-09-23 14:13:51 PDT
<
rdar://problem/6240821
>
Matt Lilek
Comment 2
2008-09-23 15:10:00 PDT
I just reproduced this in regular Safari 4, so it's not a regression from Hyatt's recent work. Checking to see if it's a Safari 3 -> 4 regression now.
mitz
Comment 3
2008-09-24 23:04:10 PDT
Created
attachment 23781
[details]
Position the widget correctly in RenderWidget::setWidget to ensure proper invalidation of scrollbars
Dave Hyatt
Comment 4
2008-09-25 00:07:18 PDT
Comment on
attachment 23781
[details]
Position the widget correctly in RenderWidget::setWidget to ensure proper invalidation of scrollbars Awesome! r=me
mitz
Comment 5
2008-09-25 00:16:30 PDT
Fixed in
r36885
<
http://trac.webkit.org/changeset/36885
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug