        Reviewed by Dave Hyatt.

- fix https://bugs.webkit.org/show_bug.cgi?id=21024
          <rdar://problem/6240821> Scrollbar not painted until hovered

        * rendering/RenderWidget.cpp:
        (WebCore::RenderWidget::setWidgetGeometry): Replaced resizeWidget with
        this method, which sets both the location and the size.
        (WebCore::RenderWidget::setWidget): Replaced the call to resizeWidget
        with a call to the new method setWidgetGeometry. Positioning the
        widget correctly ensures that the scroll bars invalidate correctly when
        they are created and resized.
        * rendering/RenderWidget.h:



Canonical link: https://commits.webkit.org/29157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36885 268f45cc-cd09-0410-ab3c-d52691b4dbfc